<resources>
    <string name="app_name">CoinApi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="alert_person_not_saved">No se ha podido guardar. Inténtelo luego.</string>
    <string name="alert_person_saved_success">Se ha guardado con éxito la persona #</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_australia">Australia</string>
    <string name="menu_canada">Canada</string>
    <string name="menu_corea_del_sur">Corea Del Sur</string>
    <string name="menu_el_salvador">El Salvador</string>
    <string name="menu_europa">Europa</string>
    <string name="menu_inglaterra">Inglaterra</string>
    <string name="menu_japon">Japon</string>
    <string name="menu_mexico">Mexico</string>
    <string name="manu_suiza">Suiza</string>
    <string name="manu_venezuela">Venezuela</string>
</resources>
