<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_australia"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_australia"/>
        <item
            android:id="@+id/nav_canada"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_canada"/>
        <item
            android:id="@+id/nav_corea_sur"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_corea_del_sur"/>
        <item
            android:id="@+id/nav_el_salvador"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_el_salvador"/>
        <item
            android:id="@+id/nav_europa"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_europa"/>
        <item
            android:id="@+id/nav_inglaterra"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_inglaterra"/>
        <item
            android:id="@+id/nav_japon"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_japon"/>
        <item
            android:id="@+id/nav_mexico"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_mexico"/>
        <item
            android:id="@+id/nav_suiza"
            android:icon="@drawable/ic_format_list"
            android:title="@string/manu_suiza"/>
        <item
            android:id="@+id/nav_venezuela"
            android:icon="@drawable/ic_format_list"
            android:title="@string/manu_venezuela"/>
    </group>
</menu>
